add_executable(request_unit_test "${GTEST_MAIN}" request_unit_test.cc)
target_include_directories(request_unit_test PRIVATE ../include)
target_link_libraries(request_unit_test PRIVATE gtest)
target_link_libraries(request_unit_test PRIVATE wormhole)
target_link_directories(request_unit_test PRIVATE ../curl_build/vendor_install/lib)
target_link_libraries(request_unit_test PRIVATE curl)
add_googletest(request request_unit_test)
